# seeeye

./: .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  Makefile  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/install/: action.yml
.github/workflows/: deploy.yml  eng-workflow.yml  eng_workflow.yml  integration-test-ios-gh.yml  lint.yml  test.yml  tests.yml
docs/: conf.py  faq.rst  index.rst  usage.rst
docs/api/: reference.rst
docs/getting_started/: archive.rst  build.rst  index.rst  installation.rst  test.rst
docs/usage/: archive.rst  build.rst  customization.rst  index.rst  test.rst
examples/ios/: .cov.yml  .gitignore  Gemfile  Makefile  Podfile
examples/ios/.cocoapods/: hooks.rb
examples/ios/.cocoapods/hooks/: base.rb  xcconfigs.rb
examples/ios/EX/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
examples/ios/EX.xcodeproj/: project.pbxproj
examples/ios/EXTests/: EXTests.swift
examples/ios/EXUITests/: EXUITests.swift
scripts/: integration_test_ios.sh
src/cicd/: cli.py
src/cicd/core/: action.py  cli.py  client.py  env.py  logger.py  typing.py  version.py
src/cicd/core/_cli/: opts.py
src/cicd/core/cipher/: cipher.py  cli.py
src/cicd/core/mixin/: base.py  core.py  git.py  logger.py  logging.py  provider.py  step.py
src/cicd/core/provider/: client.py  info.py
src/cicd/ios/: build.py  cli.py  test.py
tests/: conftest.py
tests/core/: test_client.py  test_env.py  test_provider_info.py  test_version.py  test_yaml.py
tests/core/mixin/: test_git_mixin.py
tests/core/syntax/: test_data_represented.py  test_json.py
tests/core/utils/: test_sh.py  test_step.py
tests/ios/: conftest.py
tests/ios/actions/: test_ios_action.py  test_test_extraction_action.py
tests/ios/codesign/: conftest.py  test_codesign.py
tests/ios/cov/: conftest.py  test_cov_config.py  test_cov_report.py
tests/ios/mixin/: conftest.py  test_base_ios_mixin.py  test_project_metadata_mixin.py  test_test_sharding.py  test_version_mixin.py  test_xcodebuild_mixin.py
tests/ios/project/: test_build_settings.py  test_project_metadata.py
tests/ios/runner/: test_runner.py
tests/ios/xcodebuild/: conftest.py  test_xcb_build_action.py  test_xcb_test_action.py
(+71 files in other folders)
